tests/failing/empty_struct_test.stderr
error: `#[pk]` or `#[fk] attribute not found on any column.
 --> tests/failing/empty_struct_test.rs:4:1
  |
4 | / struct EmptyStruct {
5 | |
6 | | }
  | |_^
